--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-uuid": "^1.0.2",
     "sass": "^1.52.3",
+    "tabler-icons-react": "^1.48.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
